<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="preference_file_key">direck</string>
    <string name="uid">AccountID</string>
    <string name="app_name">Direck</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_startup">Bắt đầu</string>
    <string name="button_share">Chia sẻ</string>
    <string name="button_gen">Get</string>
    <string name="button_direction">Chỉ đường</string>
    <string name="close">Đóng</string>
    <string name="contentDescription">Image</string>
    <string name="shareByLabel">Chia sẻ bởi:</string>
    <string name="done">Xong</string>
    <string name="button_bookmark">Đánh dấu</string>
    <string name="Details_Title">Vị trí</string>
    <string name="Details_distanceLabel">Khoảng cách:</string>
    <string name="Home_Title">Danh sách</string>
    <string name="Share_Title">Vị trí</string>
    <string name="Friend_Title">Bạn bè</string>
    <string name="load_contact">Load contact</string>
    <string name="loadFriend">FriendDB</string>
    <string name="toFriend">Đến bạn</string>
    <string name="searchFriend">Tìm bạn&#8230;</string>
    <string name="waitRegister">Chờ xíu nha ^^</string>
    <string name="saveContact">Lưu</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Direck</string>
    <string name="phone_no">Số điện thoại</string>
    <string name="display_name">Tên hiển thị</string>
    <string name="title_activity_s00_home">Home</string>
    <string name="activity_contacts_list">Contacts List</string>
    <string name="activity_contact_detail">Contact Detail</string>
    <string name="contacts_list_search_results_title">Contacts List Search for \"%s\"</string>
    <string name="app_description">This is a sample app, demonstrating use of the Android system Contacts Provider.</string>
    <string name="imageview_description">Contact Thumbnail</string>
    <string name="address_button_description">View Address</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_update_friend">Cập nhật bạn bè</string>
    <string name="menu_edit_contact">Edit Contact</string>
    <string name="no_contacts">No Contacts Found</string>
    <string name="no_contact_selected">No Contact Selected</string>
    <string name="search_hint">Find contacts</string>
    <!-- Used for the AlphabetIndexer in ContactsListFragment to provide quick navigation by alphabet using ListView fast scroll. -->
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <!-- When using ContactsContract.Contacts#CONTENT_FILTER_URI to search contacts, a match occurs when using a number of different fields, such as name, e-mail address, address, phone number, etc. When a match occurs that is not the name, there is currently no way to tell which other field was matched. This string is displayed in the secondary display text in ContactsListFragment when a search query match occurs that is not the display name. -->
    <string name="search_match_other">Matches Other Field</string>
    <string name="no_address">No addresses found</string>
    <string name="no_intent_found">No application found to handle this action</string>
    <string name="isFirstRegister">FirstRegister</string>
    <string name="title_activity_friend_list">FriendList</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_item_details">ItemDetails</string>
    <string name="title_activity_share_item">ShareItem</string>
    <string name="ItemName">Tên&#8230;</string>
    <string name="ItemAddress">Mô tả&#8230;</string>
    <string name="title_activity_pin_on_map">PinOnMap</string>
    <string name="title_activity_direction">Direction</string>
    <string name="Map">Bản đồ</string>
    <string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing…</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered (regId = %1$s)!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="title_activity_splash">Direck</string>
    <string name="hello_world">Hello world!</string>
    <string name="NumberDialog.Title">Lưu ý</string>
    <string name="NumberDialog.Message"> %1$s nhớ nhập chính xác số điện thoại của mình nhé: %2$s !</string>
    <string name="NumberDialog.Yes">Chính xác</string>
    <string name="NumberDialog.No">Ý, lộn</string>

</resources>
