<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Register" >

    <RelativeLayout
        android:id="@+id/progressbar_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/backgroundColor"
        android:gravity="center_horizontal"
        android:visibility="invisible" >

        <ProgressBar
            android:id="@+id/Progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical|center_horizontal"
            android:indeterminate="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/Progress"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/Progress"
            android:text="@string/waitRegister" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/contentDescription"
        android:src="@drawable/path" />

    <EditText
        android:id="@+id/phone_no"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:hint="@string/phone_no"
        android:inputType="phone"
        android:singleLine="true" />

    <EditText
        android:id="@+id/display_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_no"
        android:hint="@string/display_name"
        android:singleLine="true" >
    </EditText>

    <ImageButton
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/display_name"
        android:layout_centerInParent="true"
        android:background="@drawable/login"
        android:contentDescription="@string/button_startup"
        android:onClick="startDireck" />

</RelativeLayout>