<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context=".ItemDetails" >

    <RelativeLayout
        style="@style/TitleBar"
        android:id="@+id/titleBar"
        >
        
         <ImageButton
            android:id="@+id/imgHome"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="eventHome"
            android:contentDescription="@string/contentDescription"
            android:background="@drawable/home" />

        <TextView
            style="@style/TitleBarText"
            android:layout_alignBaseline="@+id/btnShare"
            android:text="@string/Details_Title" />

        <Button
            android:id="@+id/btnShare"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            style="@style/button"
            android:onClick="share"
            android:text="@string/button_share" />
    </RelativeLayout>

    <fragment
        android:id="@+id/ItemMap"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
         />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
         >

        <TextView
            android:id="@+id/txtLabelDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnDirection"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical|left"
            android:lines="1"
            android:text="@string/Details_distanceLabel"
            android:textColor="@color/distanceTextColor"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnDirection"
            android:layout_toRightOf="@+id/txtLabelDistance"
            android:gravity="center_vertical"
            android:textColor="@color/distanceTextColor"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnDirection"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:onClick="showDirection"
            android:text="@string/button_direction" 
            style="@style/button"/>
    </RelativeLayout>

</LinearLayout>